Fix to overflow x on win lose animation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Caudex&family=Chelsea+Market&display=swap");
 
+    font-family: 'Caudex', serif;
+
+    font-family: 'Chelsea Market', cursive;
 
 * {
     padding:0;
@@ -8,18 +12,21 @@
 
 #game-screen {
     height: 100vh;
-    width: 100vw;
+    width: 99vw;
     background-image: url("../images/hogwarts-backdrop.jpg");
     justify-content: center;
+    overflow-x: hidden;
 }
 
 .title {
+    font-family: 'Chelsea Market', cursive;
     margin-top: 20px;
     text-align: center;
     font-size: 75px;
 }
 
 .message {
+    font-family: 'Caudex', serif;
     margin: 20px 30px;
     text-align: center;
     font-size: 30px;
@@ -27,6 +34,7 @@
 }
 
 .info {
+    font-family: 'Caudex', serif;
     text-align: center;
     font-size: 20px;
     font-weight: 300;
@@ -34,12 +42,14 @@
 }
 
 #countdown {
+    font-family: 'Chelsea Market', cursive;
     text-align: center;
     font-size: 40px;
     padding: 20px;
 }
 
 #clicks {
+    font-family: 'Chelsea Market', cursive;
     text-align: center;
     font-size: 40px;
     padding:20px;
@@ -67,33 +77,38 @@
     width: 180px;
     border-radius: 15px;
     border: none;
+    border-color: none;
 }
 
-.reset-btn {
+/*.reset-btn {
     margin: 10px auto;
     height: 50px;
     width: 180px;
     border-radius: 15px;
     border: none;
-}
+}*/
 
 #start-easy {
+    font-family: 'Caudex', serif;
     font-size: 30px;
 }
 #start-medium {
+    font-family: 'Caudex', serif;
     font-size: 30px;
 }
 #start-hard {
+    font-family: 'Caudex', serif;
     font-size: 30px;
 }
 #start-extrahard {
+    font-family: 'Caudex', serif;
     font-size: 30px;
 }
 
-#reset {
+/*#reset {
     font-size: 30px;
-}
-/*---------------------------------------------------------------card*/
+}*/
+/*card*/
 
 .card.none {
     display: none;
@@ -180,31 +195,31 @@
     transform: rotateY(180deg);
 }
 
-/*---------------------------------------------------------------win*/
+/*win*/
 
 .winner.none {
     display: none;
 }
 
 .winner {
+    font-family: 'Caudex', serif;
     font-size: 90px;
-    color: #e3a000;
     text-align: center;
 }
 
-/*---------------------------------------------------------------lose*/
+/*lose*/
 
 .lose.none {
     display: none;
 }
 
 .lose {
+    font-family: 'Caudex', serif;
     font-size: 90px;
-    color:#9c1203;
     text-align: center;
 }
 
-/*---------------------------------------------------------------images*/
+/*images*/
 
 .bcard.gryf {
     background: url("../images/gryf.png") center no-repeat;
@@ -227,7 +242,7 @@
     background-color: white;
 }
 
-/*---------------------------------------------------------------win lose animation*/
+/*win lose animation*/
 
 .flyingHarry {
     position: absolute;
@@ -340,7 +355,7 @@
     }
 }
 
-/*---------------------------------------------------------------colours*/
+/*colours*/
 
 #countdown {
     color: #e3a000;
@@ -371,10 +386,10 @@
     color: #e3a000;
 }
 
-#reset {
+/*#reset {
     background-color: #e3a000;
     color: #00165e;
-}
+}*/
 
 .title {
     color: #e3a000;
